fix missing background

--- a/css/index.css
+++ b/css/index.css
@@ -757,7 +757,7 @@ p {
 		position: relative;
 		width: 100%;
 		padding: 10rem 0 4rem 0;
-		background-size: contain;
+		background: none;
 	}
 
 	.squares-bg {
@@ -934,12 +934,6 @@ p {
 	.badge-container img {
 		height: 4.6rem;
 		margin-right: 1.8rem;
-	}
-}
-
-@media (min-width: 768px) {
-	.plateaumed-header {
-		background: none;
 	}
 }
 
